# wlist_native_test

./: .gitignore  Cargo.toml
src/: common.rs  lib.rs  web.rs
src/core/: helper.rs  mod.rs  server.rs
src/core/client/: check_name.rs  copy.rs  download.rs  get.rs  list.rs  mod.rs  move.rs  refresh.rs  rename.rs  storages.rs  trash.rs  upload.rs
src/core/client/storages/: empty.rs  mod.rs  single.rs
