[package]
name = "wlist_native_test"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "^1.0"
tracing = "~0.1"
tokio = { version = "^1.41", features = ["macros", "rt-multi-thread"] }
bytes = "^1.8"
either = "^1.13"
indexmap = "^2.6"
rand = "~0.8"
wlist_native = { path = "../wlist_native" }

tracing-subscriber = "~0.3"
test-case = "^3.3" # TODO: rstest = "~0.23"
toml = "~0.8"
dashmap = "^6.1"
